2004-03-16 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b121

	* Change: dos2unix'ed .php files gallery mainfolder.

2004-03-16 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b120

	* Bugfix: Slideshow was broken when using UTF-8 Charsets in PHP >=4.3.0
	  Thanks to Shai for reporting this.

2004-03-16 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b119

	* Change: - Added posibility to translate manual entered custom Fields. (translateableFields)
		  - Moved function automaticFieldsList() into lib/lang.php

2004-03-15  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b118

	* util.php: fixed a regression in getStyleSheetLink where we were not
	  ignoring domain specific stylesheets.

2004-03-15  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b117

	* Change: Turn album sort routines into actual functions instead of 
	  building them as strings and using create_function()

2004-03-15 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b116

	* Bugfix: getBrowserlanguage() didnt work.

2004-03-15  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b115

	* Update plugin pointer in drawApplet to point to the current version
	  of the J2SE (1.4.2)

2004-03-15  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b114

	* Fixed URLs in the "Add Other" upload section to use the
	  gallery.sourceforge.net upload method instead of gallery.menalto.com

2004-03-13  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b113

	* Bug 906018: Don't create a .sized. image if the requested
	  target is larger than the original image.

	* Bug 911617: When resizing images, if the target size is
	  larger than the original, and a .sized. exists, remove it.

2004-03-07  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b112

 	* Recommit of ImageTools.jar (same as 1.4.2-cvs-b73, which apparently
	  was the wrong version of the jar).  Namely: no code changes, but the
	  code is now compiled under jdk1.1 for broader compatibility
	  (specifically it now works with the MS Java VM that comes with
	  Windows XP)
