@@ -1,3 +1,11 @@
+2004-03-16  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.3-cvs-b122
+
+	* Grammatical changes to a couple of text strings
+
+	* Fixed Bug #915821: Image deletion from view_photo.php was sometimes
+	  linking back either to a sub-album (error) or to a photo with an
+	  out-of-bounds index (error).
+
 2004-03-16 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b121
 
 	* Change: dos2unix'ed .php files gallery mainfolder.
